main app refactoring